--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
+    "@google-cloud/logging-winston": "^6.0.0",
     "@parse/node-apn": "^5.1.3",
     "acorn": "^8.0.5",
     "acorn-jsx": "^5.3.1",
@@ -136,7 +137,9 @@
     "traverse": "^0.6.6",
     "uuid": "^9.0.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/tough-cookie": "^4.0.0",
